--- a/index.html
+++ b/index.html
@@ -380,53 +380,70 @@
   </section>
   <!-- About Us -->
   <section id="about-me">
-    <div class="container mx-auto">
-        <div class="">
-          <h2 class="text-4xl font-bold text-yellow-300 text-center">About <span class="text-white">Atlas</span></h2>
-          <p class="text-yellow-400 text-center"></p>
-        </div>
-        <div class="flex justify-center items-center my-8 bg-black">
-            <div class="w-full md:w-3/4 lg:w-2/3 bg-white rounded-lg shadow-lg overflow-hidden relative">
-                <div class="md:flex">
-                    <div class="md:w-1/3">
-                        <img src="image/About_us.jpg" alt="Your Image" class="w-full h-auto md:h-full object-cover">
-                    </div>
-                    <div class="md:w-2/3 p-6 md:p-8">
-                        <h2 class="text-2xl font-bold mb-4">About Us</h2>
-                        <p class="text-gray-700 leading-relaxed">
-                            "<strong class="text-pink-600">Keerthy</strong> is a versatile professional, skilled in
-                            makeup artistry, hairstyling, and nail care. With expertise in bridal transformations,
-                            everyday elegance, and party glamour, she brings out the best in her clients. Not only
-                            is she a skincare specialist, but she also offers her own line of lash extensions and
-                            curling products. Moreover, Keerthy has introduced her exclusive collection of eyeshadow
-                            palettes, makeup brushes, foundation, and nail polish sets. Her commitment to excellence
-                            and passion for beauty shine through in every aspect of her work."
-                            <!-- <button  onclick="scrollToSection('get-in-touch')"
-                            class="hidden lg:block bg-blue-500 hover:bg-blue-700 mt-9 text-white font-bold py-2 px-4 rounded transition-all duration-300">Portfolio</button> -->
+    <h2 class="text-4xl font-bold text-yellow-300 text-center">About <span class="text-white">Me</span></h2>
+    <div class="bg-black py-10">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+          <div class="lg:text-center">
+              <!-- <h2 class="text-base text-indigo-600 font-semibold tracking-wide uppercase">About Us</h2> -->
+              <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+                <h2 class="text-4xl font-bold text-yellow-300 mb-4">ATLAS Photostudio</h2>
+              </p>
+              <p class="mt-4 max-w-2xl text-xl text-white lg:mx-auto">
+                  Capturing moments that last a lifetime. Specializing in event photography including weddings, birthdays, and more.
+              </p>
+          </div>
+  
+          <!-- Animated card section -->
+          <div class="mt-10 grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
+              <!-- Card component -->
+              <div class="relative bg-white rounded-lg p-6 overflow-hidden shadow-md transition duration-500 ease-in-out transform hover:scale-105 hover:shadow-xl">
+                  <div class="mb-4">
+                      <!-- Image or icon -->
+                      <div class="mx-auto h-12 w-12 rounded-full bg-indigo-100 flex items-center justify-center">
+                          <!-- Wedding icon -->
+                          <img src="Image/Atlas.png" alt="Sample Image" class="lg:w-12 lg:h-12 md:w-full md:h-full sm:w-auto sm:h-2 rounded-lg shadow-lg opacity-80 ">
 
-                        <div class="flex justify-center items-center space-x-6 mt-11">
-                            <a href="https://whatsapp.com/channel/0029Va71EPf9Bb5pP3xkfZ0X"
-                                class="social-icon inline-block animate-bounce">
-                                <img src="image/whatsapp copy.png" alt="WhatsApp" class="h-10 w-10">
-                            </a>
-                            <a href="https://www.instagram.com/makeover_by__keerthy?igsh=MWJjendzdzVoZmJwYw=="
-                                class="social-icon inline-block animate-bounce">
-                                <img src="image/instagram1.png" alt="Instagram" class="h-10 w-10">
-                            </a>
-                            <a href="https://www.youtube.com/@keeks_09?fbclid=PAZXh0bgNhZW0CMTEAAaaq48EzgHbkLL3d2Es3K5vMmZEiQ3-GNWpNdEl2jaAdk2bPB4BZifLy9jI_aem_Aayvl1MBuydXQJB90Ct5z_EDNtKtftVcRQq-FQ41p7xzv9_CmMlakTZyIkvsMepeHmsBXTMN85DYfywj04Xh0mjR"
-                                class="social-icon inline-block animate-bounce">
-                                <img src="image/youtube.png" alt="YouTube" class="h-10 w-10">
-                            </a>
-                            <a href="mailto:your_email@example.com" class="social-icon inline-block animate-bounce">
-                                <img src="image/mail (2).png" alt="Gmail" class="h-10 w-10">
-                            </a>
-                        </div>
-                        <p class="mt-4 text-gray-500">- Click In Touch</p>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+                      </div>
+                  </div>
+                  <h3 class="text-xl font-semibold text-gray-900">Wedding Photography</h3>
+                  <p class="mt-4 text-base text-gray-700">
+                      Stunning and timeless wedding photography services tailored to capture every moment of your special day.
+                  </p>
+              </div>
+  
+              <!-- Repeat this card structure for other services -->
+              <!-- Example: Birthday Photography -->
+              <div class="relative bg-white rounded-lg p-6 overflow-hidden shadow-md transition duration-500 ease-in-out transform hover:scale-105 hover:shadow-xl">
+                  <div class="mb-4">
+                      <div class="mx-auto h-12 w-12 rounded-full bg-indigo-100 flex items-center justify-center">
+                          <!-- Birthday icon -->
+                          <img src="Image/Atlas.png" alt="Sample Image" class="lg:w-12 lg:h-12 md:w-full md:h-full sm:w-auto sm:h-2 rounded-lg shadow-lg opacity-80 ">
+                      </div>
+                  </div>
+                  <h3 class="text-xl font-semibold text-gray-900">Birthday Photography</h3>
+                  <p class="mt-4 text-base text-gray-700">
+                      From candid shots to formal portraits, we capture the joy and celebration of birthdays with creativity and passion.
+                  </p>
+              </div>
+  
+              <!-- Example: Event Photography -->
+              <div class="relative bg-white rounded-lg p-6 overflow-hidden shadow-md transition duration-500 ease-in-out transform hover:scale-105 hover:shadow-xl">
+                  <div class="mb-4">
+                      <div class="mx-auto h-12 w-12 rounded-full bg-indigo-100 flex items-center justify-center">
+                          <!-- Event icon -->
+                          <img src="Image/Atlas.png" alt="Sample Image" class="lg:w-12 lg:h-12 md:w-full md:h-full sm:w-auto sm:h-2 rounded-lg shadow-lg opacity-80 ">
+                      </div>
+                  </div>
+                  <h3 class="text-xl font-semibold text-gray-900">Event Photography</h3>
+                  <p class="mt-4 text-base text-gray-700">
+                      Professional event photography services covering corporate events, anniversaries, and more, ensuring every moment is captured beautifully.
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  
 </section>  
   <!-- Contact Section -->
   <section class="contact-section transition-transform duration-300 ease-in-out bg-black" id="contact">
