--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
           <div class="lg:text-center">
               <!-- <h2 class="text-base text-indigo-600 font-semibold tracking-wide uppercase">About Us</h2> -->
               <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                <h2 class="text-4xl font-bold text-yellow-300 mb-4">ATLAS Photostudio</h2>
+                <h2 class="text-3xl font-bold text-yellow-300 mb-4">ATLAS Photography</h2>
               </p>
               <p class="mt-4 max-w-2xl text-xl text-white lg:mx-auto">
                   Capturing moments that last a lifetime. Specializing in event photography including weddings, birthdays, and more.
