--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,7 @@
     </style>
 </head>
 <body class="bg-black p-4">
-    <h2 class="text-2xl font-bold text-yellow-300 mb-8 text-start">Wedding <span class="text-white">Photos</span></h2>
+    <h2 class="text-2xl font-bold text-yellow-300 mb-8 text-start">Eplore <span class="text-white">Atlas</span></h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
         <!-- Image Card -->
         <div class="relative bg-white rounded-lg overflow-hidden shadow-md transition duration-300 ease-in-out transform hover:scale-105 image-card">
