--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
           team of experienced photographers is dedicated to delivering exceptional quality and timeless images. Trust
           Atlas Photostudio to transform your memories into beautiful works of art. </p>
           <div class="flex space-x-4 mb-10">
-            <a href="#" class="text-gray-700 hover:text-gray-900">
+            <a href="https://wa.me/qr/HY2OYVXF6225L1" class="text-gray-700 hover:text-gray-900">
               <img src="Image/whatsapp (1).png" alt="WhatsApp" class="h-6 w-6 hover:opacity-75">
             </a>
-            <a href="#" class="text-gray-700 hover:text-gray-900">
+            <a href="https://www.instagram.com/atlasphotography_official?igsh=MWMzbGhjbDZiamRzMw==" class="text-gray-700 hover:text-gray-900">
               <img src="Image/instagram (1).png" alt="Instagram" class="h-6 w-6 hover:opacity-75">
             </a>
             <a href="#" class="text-gray-700 hover:text-gray-900">
