--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Atlasport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
@@ -65,7 +65,7 @@
     </style>
 </head>
 <body class="bg-black p-4">
-    <h2 class="text-2xl font-bold text-yellow-300 mb-8 text-start">Eplore <span class="text-white">Atlas</span></h2>
+    <h2 class="text-3xl font-bold text-yellow-300 mb-8 text-center">Explore <span class="text-white">Atlas</span></h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
         <!-- Image Card -->
         <div class="relative bg-white rounded-lg overflow-hidden shadow-md transition duration-300 ease-in-out transform hover:scale-105 image-card">
@@ -75,7 +75,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -131,7 +131,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('image/Horizontal Image/-2117903398.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -153,7 +153,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-160070143.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-160070143.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -164,7 +164,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -175,7 +175,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -186,7 +186,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -197,7 +197,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -208,7 +208,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -219,7 +219,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -230,7 +230,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -241,7 +241,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -252,7 +252,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -263,7 +263,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -274,7 +274,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -285,7 +285,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -296,7 +296,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -307,7 +307,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -318,7 +318,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -329,7 +329,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -340,7 +340,7 @@
             <div class="absolute inset-0  opacity-0 hover:opacity-50 transition-opacity duration-300 ease-in-out overlay">
                 <!-- Hover Content -->
                 <div class="flex items-center justify-center h-full">
-                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">View</button>
+                    <button onclick="openModal('Image/VerticalImage/-1405904343.jpg')" class="px-4 py-2 bg-gray-800 text-white rounded-md">Atlas</button>
                 </div>
             </div>
         </div>
@@ -354,7 +354,7 @@
         </div>
     </div>
 
-    <script>
+    <!-- <script>
         // Function to open modal with specified image source
         function openModal(src) {
             var modal = document.getElementById("myModal");
@@ -368,6 +368,6 @@
             var modal = document.getElementById("myModal");
             modal.style.display = "none";
         }
-    </script>
+    </script> -->
 </body>
 </html>
